<resources>
    <string name="app_name">MyQuizz</string>
    <string name="question1"> To Be Or Not To BE ? \n That the question</string>
    <string name="answer1">answer1</string>
    <string name="answer2">answer2</string>
    <string name="answer3">answer3</string>
    <string name="answer4">answer4</string>
    <string name="Administration">Administration</string>
    <string name="title_activity_admin">adminActivity</string>
    <string name="Admin_add">Ajouter</string>
    <string name="AdminviewRefresh">refresh</string>
    <string name="RemoveAll">Suprimer Tout</string>

</resources>
