<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/quizLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.QuizActivity">


    <TextView
        android:id="@+id/quizTextView_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/question1"
        android:textAlignment="center"

        android:textColor="@color/colorQuestion"
        android:textSize="22sp" />

    <Button
        android:id="@+id/quizButton_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:background="@color/colorBackgroundQuestion"
        android:text="@string/answer1"
        android:textColor="@color/colorAnswer"
        android:textSize="20sp" />

    <Button
        android:id="@+id/quizButton_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:background="@color/colorBackgroundQuestion"
        android:text="@string/answer2"
        android:textColor="@color/colorAnswer"
        android:textSize="20sp" />

    <Button
        android:id="@+id/quizButton_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:background="@color/colorBackgroundQuestion"
        android:text="@string/answer3"
        android:textColor="@color/colorAnswer"
        android:textSize="20sp" />

    <Button
        android:id="@+id/quizButton_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:background="@color/colorBackgroundQuestion"
        android:text="@string/answer4"
        android:textColor="@color/colorAnswer"
        android:textSize="20sp" />
</LinearLayout>